validator_refactor_user_fr